# tour_cpp

./: .gitignore  .gitmodules  AGENTS-CN.md  AGENTS.md  CMakeLists.txt  LICENSE  README.md
c_cpp_core/: CMakeLists.txt
calculator/calculator_c/: CMakeLists.txt
calculator/calculator_c/include/: calculator.h  functions.h
calculator/calculator_c/script/: test_calculator.sh
calculator/calculator_c/src/: calculator.c  functions.c  main.c  ui.c
calculator/calculator_c/ut/ui/: get_user_input.c  get_user_input_dynamic.c  ui.c  ui.h  ui.md
calculator/calculator_cpp/: BUILDING.md  CMakeLists.txt
calculator/calculator_cpp/include/: constants.h  parser.h
calculator/calculator_cpp/script/: test_calculator.sh
calculator/calculator_cpp/src/: calculator.cpp  constants.cpp  main.cpp  parser.cpp  ui.cpp
calculator/doc/: algorithm_comparison.md  recursive_descent_parsing.md
calculator/docs/: calculator_architecture.md
calculator/test/: prof.md  run_all_tests.sh  testing_plan.md
calculator/test/common/: test_utils.sh
calculator/test/functional/: functional_test.sh
calculator/test/security/: security_test.sh
calculator/tests/: generate_report.sh
calculator/tests/performance/: stress_test.sh
calculator/tests/security/: valgrind_test.sh
guessing_game/: CMakeLists.txt
guessing_game/docs/: parser_int.md
guessing_game/guessing_game_c/docs/: scanf_fgets.md
guessing_game/guessing_game_c/include/: guess_game_v2.h  guess_game_v3.h
guessing_game/guessing_game_c/src/: guess_game_v1.c  guess_game_v2.c  guess_game_v3.c  main.c
guessing_game/guessing_game_cpp/: CMakeLists.txt
guessing_game/guessing_game_cpp/docs/: guess_diff.md  guess_end.md
guessing_game/guessing_game_cpp/include/: guess_game_v1.hpp
guessing_game/guessing_game_cpp/src/: guess_game_v1.cpp  guess_game_v2.cpp  main.cpp
programs/: llm_prompt.md
programs/calculator_qt/: CMakeLists.txt
programs/calculator_qt/calculator_c/include/: constants.h  error.h  lexer.h  parser.h  ui.h
programs/calculator_qt/calculator_c/src/: constants.c  error.c  lexer.c  parser.c
programs/calculator_qt/calculator_c/src/utils/: helper.c
programs/calculator_qt/calculator_c/ut/ui/: ui.c  ui.h
programs/calculator_qt/calculator_cpp/: CMakeLists.txt
programs/calculator_qt/calculator_cpp/include/: calculator.h  error.h  functions.h  ui.h
programs/calculator_qt/calculator_cpp/src/: functions.cpp
programs/calculator_qt/docs/: ast_parsing.md  shunting_yard_algorithm.md
programs/calculator_qt/tests/performance/: memory_test.sh  performance_test.sh
programs/guessing_game/guessing_game_c/: CMakeLists.txt
programs/guessing_game/guessing_game_c/docs/: guess_diff.md  guess_end.md  parser_int.md
programs/guessing_game/guessing_game_c/include/: guess_game_v1.h  guess_game_v2.h
programs/guessing_game/guessing_game_c/src/: guess_game_v2.c  main.c
programs/guessing_game/guessing_game_cpp/docs/: cin_getline.md  stoi_istringstream.md
programs/guessing_game/guessing_game_cpp/include/: guess_game_v2.hpp
reference/c_cpp_core/c/language/basic_concepts/: basic_concepts.md
reference/c_cpp_core/c/language/basic_concepts/code/: basic_concepts.c  basic_concepts.h
reference/c_cpp_core/c/language/expressions/: operators.md
reference/c_cpp_core/c/language/statements/: break.md  compounds.md  continue.md  do.md  expressions.md  for.md  goto.md  if.md  labels.md  return.md  switch.md  while.md
reference/c_cpp_core/c/toolchain/: toolchain.md
reference/c_cpp_core/c/toolchain/llvm/: llvm.md
reference/c_cpp_core/cpp/language/expressions/: expressions.md
reference/c_cpp_core/cpp/language/statements/: break.md  compounds.md  continue.md  contract_assert.md  declarations.md  do.md  expressions.md  for.md  goto.md  if.md  labels.md  range_for.md  return.md  switch.md  transactional_memory.md  try.md  while.md
rust/guessing_game/docs/: guess_diff.md  macro_select.md
rust/guessing_game/src/: main.rs
rust/guessing_game/src/core/: guess_v1.rs  guess_v2.rs  mod.rs
rust/programs/guessing_game/docs/: guess_end.md  mod_create.md
